# birthdayTgRs

./: .gitignore  Cargo.toml  README.md  birthday_tg_rs.template.toml
src/: bth.rs  database.rs  main.rs  mytime.rs  user_config.rs
